syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.smartcity.energyconsumption";
option java_outer_classname = "EnergyConsumptionProto";

package energyconsumption;

// Interface exported by the Energy Consumption service.
service EnergyConsumption {
  rpc consumeEnergy(ConsumeEnergyRequest) returns (ConsumeEnergyResponse) {}
}

message ConsumeEnergyRequest {
  double energyAmount = 1;
}

message ConsumeEnergyResponse {
  bool success = 1;
}
